# darkroom

./: .gitignore  BACKLOG.md  CHEATSHEET.md  CLAUDE.md  README.md  archive_ingest.py  check_missing_object.py  darkroom.toml.example  pyproject.toml  wbpp_finish.py  wbpp_prep.py
darkroom/: catalog.py  catalog_cli.py  catalog_client.py  catalog_db.py  cataloger.py  cli.py  config.py  finish.py  ingest.py  names.py  parse.py  picker.py  prep.py  procscan.py  renames.py  scanner.py  serve.py  sites.py  wbpp.py  wbpplog.py
darkroom/templates/catalog/: base.html  index.html  login.html  queue.html  session.html  target.html
darkroom/templates/triage/: audit.html  base.html  commit.html  dashboard.html  item.html  queue.html
darkroom/triage/: actions.py  checks.py  cli.py  db.py  preview.py  scanner.py  server.py  suggest.py
darkroom/webapi/: __init__.py  app.py  auth.py  common_names.py  passwd.py  ui.py
darkroom/webapi/static/: app.js  safelight.css
darkroom/webapi/static/fonts/: README
deploy/: darkroom-api.service  darkroom-backup.service  darkroom-backup.sh  darkroom-backup.timer
docs/design/: safelight-mock.html
docs/superpowers/plans/: 2026-05-15-archive-ingest.md  2026-05-15-wbpp-finish.md  2026-05-15-wbpp-prep.md  2026-06-01-archive-triage.md  2026-06-30-b3-b4-b5-dso-rename.md  2026-06-30-r6-w5-w6-w7.md
docs/superpowers/specs/: 2026-05-15-archive-ingest-design.md  2026-05-15-wbpp-finish-design.md  2026-05-15-wbpp-prep-design.md
scripts/: dev-snapshot.sh
tests/: conftest.py  test_catalog.py  test_catalog_cli.py  test_catalog_client.py  test_catalog_db.py  test_cataloger.py  test_check_missing_object.py  test_client_server.py  test_ingest.py  test_names.py  test_parse.py  test_picker.py  test_procscan.py  test_renames.py  test_scanner.py  test_sites.py  test_wbpp.py  test_wbpp_finish.py  test_wbpplog.py  test_webapi.py  test_webapi_auth.py  test_webapi_ui.py
tests/triage/: test_actions.py  test_checks.py  test_db.py  test_preview.py  test_scanner.py  test_server.py  test_suggest.py
