[project]
name = "darkroom"
version = "0.1.0"
description = "Astrophotography pipeline: catalog, archive ingestion, and WBPP session prep"
requires-python = ">=3.11"
dependencies = [
    "astropy>=5.0",
    "datasette>=0.65",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
darkroom = "darkroom.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["darkroom"]
