[project]
name = "darkroom"
version = "0.1.0"
description = "Astrophotography pipeline: catalog, archive ingestion, and WBPP session prep"
requires-python = ">=3.11"
dependencies = [
    "astropy>=5.0",
    "astroquery>=0.4",
    "fastapi>=0.111",
    "httpx>=0.27",
    "jinja2>=3.1",
    "opencv-python-headless>=4.9",
    "pillow>=10.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.3",
    "questionary>=2.0",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
darkroom = "darkroom.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["darkroom"]
